--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "botkit": "^0.7.0",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
+    "knex": "^0.16.3",
+    "objection": "^1.4.0",
+    "pg": "^7.7.1",
     "request": "^2.88.0"
   },
   "devDependencies": {
