--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "bot.js",
   "scripts": {
     "dev": "nodemon bot.js",
+    "staging": "node bot.js",
     "lint": "eslint .",
     "lint-fix": "eslint --fix ."
   },
