--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "botkit": "^0.7.0",
+    "db-errors": "^0.1.1",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "knex": "^0.16.3",
     "objection": "^1.4.0",
+    "objection-db-errors": "^1.0.0",
     "pg": "^7.7.1",
     "request": "^2.88.0"
   },
