--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "bot.js",
   "scripts": {
     "dev": "nodemon bot.js",
-    "staging": "node bot.js",
     "lint": "eslint .",
-    "lint-fix": "eslint --fix ."
+    "lint-fix": "eslint --fix .",
+    "staging": "node bot.js",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -42,6 +43,7 @@
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
+    "jest": "^23.6.0",
     "nodemon": "^1.18.9"
   }
 }
