--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "botkit": "^0.7.0",
+    "botkit-storage-postgres": "^0.1.0",
     "db-errors": "^0.1.1",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
