--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "knex": "^0.16.3",
+    "moment": "^2.24.0",
     "objection": "^1.4.0",
     "objection-db-errors": "^1.0.0",
     "pg": "^7.7.1",
