--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "Backend server for Slack ama bot",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon bot.js",
+    "dev": "nodemon index.js",
     "lint": "eslint .",
     "lint-fix": "eslint --fix .",
-    "staging": "node bot.js",
+    "staging": "node index.js",
     "test": "jest"
   },
   "repository": {
