--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
-    "botkit": "^0.7.4",
+    "botbuilder-adapter-slack": "^1.0.6",
+    "botkit": "^4.6.1",
     "botkit-storage-pg": "^0.2.2",
     "dotenv": "^6.2.0",
     "express": "^4.17.1",
